# ftl-mcp

./: CLAUDE.md  PLAN.md  PROMPTS.md  README.md  example_client.py  pyproject.toml  sample_inventory.yml
src/ftl_mcp/: __init__.py  ftl_integration.py  ftl_mcp.py  ftl_mcp_server.py  secrets.py  server.py  state.py  tools.py
tests/: __init__.py  inventory.yml  test_ansible_integration.py  test_playbook_generation.py  test_resources.py  test_secrets.py  test_server_integration.py  test_state.py  test_tools.py
